<resources>
    <string name="app_name">employeeManagement</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgotpassword">ForgotPassword</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_your_account">Create Your Account?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="signup">SIGN UP</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navbar">navbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="emploee_management_system">Emploee Management System</string>
    <string name="manage_salary">Manage Salary</string>
    <string name="upcoming">UpComing</string>
    <string name="logout">Logout</string>
    <string name="attendance">Attendance</string>
    <string name="add_details">Add Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="logo">logo</string>
    <string name="employee_management_system">Employee Management System</string>

</resources>